tests/errors/illegal_root_extend.tau.second
func foo(){ //this should cause an error

}